<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_logologin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="159dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/logologin_bt_anonimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logologin_bt_anonimo" />

        <Button
            android:id="@+id/logologin_bt_acceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logologin_bt_acceder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/logologin_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DCDCDC"
            android:text="@string/configuracion_et_hind_password" />

        <EditText
            android:id="@+id/logologin_et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DCDCDC"
            android:ems="10"
            android:hint="@string/configuracion_et_hind_password"
            android:inputType="textPassword"
            android:width="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/logologin_tv_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DCDCDC"
            android:text="@string/configuracion_et_hind_usuario" />

        <EditText
            android:id="@+id/logologin_et_usuario"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DCDCDC"
            android:ems="10"
            android:hint="@string/configuracion_et_hind_usuario" />
    </LinearLayout>

</RelativeLayout>